Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -67,7 +67,7 @@ Four years out of the total 23 years do not cover all four quarters. Among the f
 The LKA LFS is representative at the urban/rural division of each district level. 
 
 Note that in the raw data the `sector` variable originally has three categories: urban, rural, and estate. An estate sector in Sri Lanka is actually a plantation sector. An estate sector consists of all plantations which are 20 acres or more
-in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector [(_Sinnathurai, V., Březinová, O., 2012_)](utilities/Sinnathurai_V_Březinová_O_2012.pdf). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors. However, coding urban/rural status in this way resulted a much higher proportion of urban population that is as twice as the numbers in ILO and World Bank Development Indicators (WDI) in in 1992-1995 (i.e., 40% in our harmonized data versus 18% in other sources). To make the case more convoluted, most of the LKA national annual reports of LFS 1992-2021 report a 44% ~ 50% of rural labour force participation, compared to 14% ~ 18% in our harmonized data as well as in other sources. This mismatch seems to be caused by the ill-defined urban-rural definition. More discussion of urban-rural definition of LKA in the next section "Other noteworthy aspects - Urban/rural definition".        
+in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector [(_Sinnathurai, V., Březinová, O., 2012_)](utilities/Sinnathurai_V_Březinová_O_2012.pdf). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors. However, coding urban/rural status in this way resulted a much higher proportion of urban population that is as twice as the numbers in ILO and World Bank Development Indicators (WDI) in 1992-1995 (i.e., 39% in our harmonized data versus 18% in other sources). However, the urbanization rate in our harmonized data drops from 39.04% in 1995 to 14.37% in 1996 and then fluctuates around 16.5% in later years, regardless that we use our urban-rural coding scheme consistently in all years. Additionally, the urbanization statistics in LKA national annual reports range from 21.62% in 1994 to 17.12% in 2021. It is even lower in some years' quarterly report, 16.12% in the fourth quarter of 1999 for example. This mismatch seems to be caused by the ill-defined urban-rural definition. More discussion of urban-rural definition of LKA in the next section "Other noteworthy aspects - Urban/rural definition".        
 
 
 ## Other noteworthy aspects  
