Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -16,7 +16,7 @@ The Sri Lankan Labour Force Survey (LFS) is a household-based sample survey cond
 
 The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods for years between 1992 and 2004: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as an indication of migration.   
 
-GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Years and sample size of LFS harmonized for GLD are:
+GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Note that we did not harmonize all years in sequence, but the years we have complete data of good quality. Years and sample size of LFS harmonized for GLD are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
@@ -46,11 +46,12 @@ GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Years and s
 
 Note: 
 1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and above (years marked with <sup>*</sup> ). 
-2) The annual report of 1995 could not be found so the number of household reported officially for this year is unknown.  
+2) The annual report of 1995 could not be found so the number of household reported officially for this year is unknown.
+3) Data of 2005 is actually availabel but we did not harmonize this year considering its poor quality. The dataset has large amount of duplications and it only has observations in the third quarter, meaning a small sample size about one fourth of other years. Furthermore, the coding of district is not consistent with other years and the categories are different from the code list stated in the questionnaire.  
 
 ## Where can the data be found?
 
-Through free registration, the data is publicly available for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data set. Although Lanka Datta claims that with registration, LFS can be downloaded 100% of the original raw data set, trying to download each year's LFS confirms that only 25% of the original data set can be downloaded.  
+Through free registration, the data is publicly available for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data set. Although Lanka Datta claims that with registration, LFS can be downloaded 100% of the original raw data set, trying to download each year's LFS confirms that only 25% of the original data set can be downloaded.   
 
 All annual reports are available on Lanka Datta and can be downloaded without any restrictions.
 
@@ -124,15 +125,15 @@ Our harmonized data show discontinuity between 1995 and 1996, indicating a chang
 
 ### Duplicates in early years 
 
-In several early years such as 1993-1996, coding household and individual identification using the original survey ID information such as province, block, household number and personal serial number produces duplicates. Below are two examples from the year 1994 and 1996 respectively. 
+In several early years such as 1993-1996 and 2002-2008, coding household and individual identification using the original survey ID information such as province, block, household number and personal serial number produces duplicates. Below are two examples from the year 1994 and 2008 respectively. 
 
-| **Example 1994**	| **Example 1996**	|
+| **Example 1994**	| **Example 2008**	|
 | :------:	| :-------:		|
-| ![1994](utilities/duplicates_1994.png) | ![1996](utilities/duplicates_1996.png)|
+| ![1994](utilities/duplicates_1994.png) | ![2008](utilities/duplicates_2008.png)|
 
-To solve this, [MORE EXPLANATION]
+However, they are two different cases. Regarding 1994, the duplicates are caused by assigning different household members one identical household member number by mistake. Essentially, people with the same unique personal IDs are different individuals. To solve this, we ordered people in descending order of their age within each household and assign new individual (in household) ID numbers. These can be used as their individual identifier.
 
-**we ordered people in descending order of their age within each household and assign new individual (in household) ID numbers. These can be used to  which composes their individual identifier.
+In the case of 2008, not all duplicates are caused by the duplicated household member number assignment. Before harmonizing, we run a `duplicates report _all` test for all years to make sure that the raw data sets are free of duplicates in terms of all variables. 2008 has 52 observations of which 26 are duplicated once. So before harmonizing, we dropped the 26 surpluses. After dropping the surpluses, as shown in the example, there are still duplicates but these are the ones caused by household member number assignment mistake. And then we repeat the process stated above for 1994  
 
 
 ### Labour force participation and employment statistics comparison with LKA national annual reports
