--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -54,6 +54,11 @@ b. Any place meeting three criteria concurrently:
 
 For more information on the urban panel data, refer to this [text](Urban%20panel%20data.md).
 
+
+## Adjustments during the covid-19 pandemic
+
+The PLFS survey faced multiple disruptions due to the COVID-19 pandemic. Initially, fieldwork was halted on March 18, 2020. It resumed on June 1, 2020, addressing both the pending tasks from January-March 2020 and those scheduled for April-June 2020. Even with these delays, the survey teams ensured that data still corresponded to the originally planned periods. For example, if a survey intended for April 2020 was conducted in June, the questions still pertained to events from April. This approach meant that, despite changes in collection dates, the data's reference points remained unchanged. To minimize risks associated with the pandemic, from June 2020 onward, the survey officials conducted certain interviews, especially revisits, over the phone, sticking to the original reference periods. The challenges persisted with another interruption in April 2021 due to the pandemic's 2nd wave, but resumed in June 2021.
+
 ## Other noteworthy aspects
 
 ### Changes in state codes
