Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -1,7 +1,7 @@
-# Introduction to Ethiopian national Labor Force Survey (LFS)
+# Introduction to Georgian national Labor Force Survey (LFS)
 
-- [What is the ETH LFS](#what-is-the-eth-lfs)
-- [What does the ETH LFS cover?](#what-does-the-eth-lfs-cover)
+- [What is the GEO LFS](#what-is-the-geo-lfs)
+- [What does the GEO LFS cover?](#what-does-the-geo-lfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
@@ -9,21 +9,23 @@
 
 ## What is the ETH LFS?
 
-The Ethiopian Labor Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
+The Georgian Labor Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
 
 
 ## What does the ETH LFS cover?
 
-The ETH LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In addition, the ETH LFS also includes information on migration. Year 2021 has richer content on disabilities section. Years used for harmonization range from 1999 to 2021 discontinuously, 4 years in total.
+The GEO LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Years used for harmonization range from 2017 to 2022 continuously, 6 years in total.
 
 Years and sample size of LFS harmonized for GLD are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
-| [1999](utilities/ETH_1999_LFS_report.pdf)  | 81,339        | 366,274      |  54,430,917  |   81,473   | 54,453,238|
-| [2005](utilities/Labour_force_survey_Final_Report_2005.pdf)  | 54,443        | 230,680      |  63,228,599  |   54,484   | 63,228,600|
-| [2013](utilities/nlfs_analytical_report_labor_force_2013.pdf)  | 58,321        | 240,660      |  80,444,148  |   58,396   | 80,444,148|
-| [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_2021_LMS.docx)  | 43,329        | 174,613      |  98,035,894 |    49,916   | 98,038,146|
+| 2017 | 20,486         |  54,824     |  12,067,012  |    | |
+| 2018 | 20,347         |  58,636     |   8,000   | N/A | N/A |
+| 2019 | 21,501         |  61,386     |  12,493,005  | N/A | N/A |
+| 2020 | 20,697         |  58,979     |  12,736,185  | N/A | N/A |
+| 2021 | 21,367         |  60,837     |  12,834,145  | N/A | N/A |
+| 2022 | 13,431         |  60,263     |  12,891,187  | N/A | N/A |
 
 All the four years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
 
@@ -55,8 +57,6 @@ Category III: - Other urban centers: Urban centers in the country other than tho
 
 ## What is the geographic significance level?
 
-The official reports detailed results by gender, sector (i.e. urban or rural), and regions in Ethiopia. For all four years, they are representative at the urban/rural division of each region level. Therefore, we coded `subnatidsurvey` as a combination of region and urban/rural status, i.e. Affar-rural vs. Affar-urban. 
-
 
 ## Other noteworthy aspects  
 
@@ -66,29 +66,6 @@ In general, so far we do not have information on the version of Ethiopia's Natio
 
 Even though the version information of NOIC is missing, we still managed to map the original industry and occupation variables in the raw datasets according to annual reports. The NOIC of LFS 2005 is based on ISIC Rev.3 and its ISCO counterpart is ISCO 88; the ISIC and ISCO used for year 2013 and 2021 are ISIC Rev.4 and ISCO08 respectively. We followed the guide in ETH LFS annual reports and completed the mapping this way but we are still waiting for more detials of the NOIC version and labeling of each NOIC subcategories to double check the mapping. 
 
-- For year **1999**, we did not harmonize `indsutrycat_isic` since the original unlabled industry variable have too many unmatched categories with ISIC Rev.3. We harmonized `occup_isco` at two-digit level.
-- For year **2005**, we mapped `industrycat_isic` at three-digit level and `occup_isco` at two-digit level.
-- For year **2013**, we mapped `industrycat_isic` at four-digit level with only few changes and `occup_isco` at two-digit level.
-- For year **2021**, we mapped `industrycat_isic` at four-digit level and `occup_isco` at three-digit level.
-
-Some categories in NOIC could not be found in ISIC or ISCO due to adaptations to make NOIC reflect local economic characteristics. So we made some changes to the codes and more details about the correspondence are in this [separate document](Correspondence_National_International_Classifications.md).
-
 
 ### Mapping years of education
 
-Mapping educational achievement is tricky for Ethiopia, due to the convoluted categorization of the original education variables, especially in 2013 and 2021. In the last two years, the categories are mixed with old and new curriculums. With great help from our colleagues in Poverty & Equity group and Ethiopian Statistics Service (ESS), we were able to correctly complete the educational achievement harmonization for all years and the correspondence is covered in this [separate document](Educational_Achievement_Harmonization.md).   
- 
-
-### Helper files for region, zone and wereda naming
-
-We created a codelist for `subnatid2` and `subnatid3` according to CSA's codebooks of EA for 2021. This is file needs to be used along with the harmonization codes of 2021 to complete the harmonization process. Commonly one zone represents one zone, meaning has one zone name. But kindly be noted that there are two zone codes with two different zone names each:
-1)  0401 - Oromia-Mirab Wollega 
-    0401 - Oromia-Misrak Wollega 
-2)  0601 - Benishangul-Gumuz-Assosa     
-    0601 - Benishangul-Gumuz-Metekel
-    
-These cases exist in the original document shared with us by CSA so we could not figure out the reason of having different zone names by one same zone code.      
-    
-| **Document**	| **Description**	| **Referrence**|
-| :---------:	| :-------------: | :-----------: |   
-| [ETH_subnatid_2021](utilities/Additional%20Data/ETH_2021_subnatid_codebook.dta)  | A comprehensive code list containing the codes and names of region, zone, wereda, town, kebele, and enumeration area in Ethiopia. It was used for harmonizing the GLD variable `subnatid2` and `subnatid3` for 2021.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
