Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -7,12 +7,12 @@
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the geo LFS?
+## What is the GEO LFS?
 
 The Georgian Labor Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
 
 
-## What does the geo LFS cover?
+## What does the GEO LFS cover?
 
 The GEO LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Years used for harmonization range from 2017 to 2022 continuously, 6 years in total.
 
