Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -69,7 +69,7 @@ The state codes in the 2021 PLFS capture the following changes:
 
 2. The merger of Dadra and Nagar Haveli and Daman and Diu. State codes in the 2021 PLFS were updated to merge two territories, Dadra and Nagar Haveli, and Daman and Diu. These were formerly codes "26" and "25", respectively, and merged into code "25". The Indian Government proposed this merger in July 2019 as a strategic move to streamline administration and reduce costs. Subsequently, the necessary legal framework, the Dadra and Nagar Haveli and Daman and Diu (Merger of Union Territories) Bill, 2019, was introduced in Parliament and received presidential assent in December 2019. The merger officially took effect on January 26, 2020.
 
-
+For the full list of the state code changes, refer to this [document](utilities/IND_State_Code_Changes_2021.xlsx). The cross-walk between the updated state codes and their previous state codes are documented [here](utilities/IND_State_Correspondence_2021.csv).
 
 ### Reading in data
 
