Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -4,6 +4,8 @@
 - [What does the PLFS cover?](#what-does-the-plfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
+- [What is the geographic significance level?](#what-is-the-geographic-significance-level)
+- [Urban panel data](#urban-panel-data)
 - [What is the significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
