Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -7,6 +7,7 @@
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
 - [Urban panel data](#urban-panel-data)
 - [What is the significance level?](#what-is-the-geographic-significance-level)
+- [Adjustments during the covid-19 pandemic](#Adjustments-during-the-covid-19-pandemic)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
 ## What is the IND PLFS?
