Update and rename 1. Introduction to Nepal  LFS.md to 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -1,21 +1,23 @@
 
-# Introduction to Sierra Leone (SLE) national Labour Force Survey (LFS)
+# Introduction to Nepal (NPL) national Labour Force Survey (LFS)
 
-- [What is the SLE LFS](#what-is-the-sle-lfs)
-- [What does the SLE LFS cover?](#what-does-the-sle-lfs-cover)
+- [What is the NPL LFS](#what-is-the-npl-lfs)
+- [What does the NPL LFS cover?](#what-does-the-npl-lfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the SLE LFS?
+## What is the NPL LFS?
 
-The 2014 SLE LFS is the first labor force survey in the country since 1984. Before SLE LFS 2014, the 2004 and 2011 country integrated household survey were the main source of information on labor market and employment. SLE LFS 2014 was conducted by the Statistics Sierra Leone (SSL), with the support of the World Bank, the International Labour Organization, and the Deutsche Gesellschaft für Internationale Zusammenarbeit. The survey data was collected between July and August 2014 and is nationally representative. 
+The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated to better monitor labor market and economic activities. The 1998 LFS was carried out by the Central Bureau of Statistics from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme.
+
+This harmonization 
 
 
-## What does the SLE LFS cover?
+## What does the NPL LFS cover?
 
-The SLE LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days and in the past year. In addition, the SLE LFS also includes information on migration. As we currently only have one year survey data, there is no way to compare the depth and richness in information between years. However, SLE LFS covers 25,645 individuals, 4,199 households randomly selected from a stratified cluster sample with oversampling urban areas. At strata level, it covers 280 enumeration areas in 19 districts/cities plus Western region as a whole.    
+The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days and in the past year. In addition, the NPL LFS also includes information on migration. As we currently only have one year survey data, there is no way to compare the depth and richness in information between years. However, NPL LFS covers 25,645 individuals, 4,199 households randomly selected from a stratified cluster sample with oversampling urban areas. At strata level, it covers 280 enumeration areas in 19 districts/cities plus Western region as a whole.    
 
 Below is a table showing districts and cities in the report vs. in the data:
 
@@ -76,11 +78,11 @@ Considering the pairs of districts being duplicated are adjacent to each other, 
 
 ### Missing Strata
 
-Strata in SLE, instead of being district as most of the case in other countries, is part of the sampling design and more of the rural-urban/peri-urban divide. Furthermore, the stratum should be unique within a district or region in the case of SLE. However, the variable named "stratum" in the raw dataset, has overlapping stratum codes between regions and districts. Hence, we did not code strata.
+Strata in NPL, instead of being district as most of the case in other countries, is part of the sampling design and more of the rural-urban/peri-urban divide. Furthermore, the stratum should be unique within a district or region in the case of NPL. However, the variable named "stratum" in the raw dataset, has overlapping stratum codes between regions and districts. Hence, we did not code strata.
 
 ### Household Weight - Two Different Weighting Variables
 
-In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unknown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the beginning. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
+In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unknown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the beginning. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to NPL's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
 
 ![WAP_report](utilities/reportWAP.png)
 
@@ -110,21 +112,21 @@ The GLD data is thus different to the ILO published data yet we believe it to be
 
 ### Eligibility Variable
 
-As the comments in the scripts explain, `A17_corrected` was created following the questionnaire's rules and it shows that 20.6% of the sample size are not eligible for the survey. These observations are in fact not interviewed, as they do not have values for variables after `A17`. The eligibility in `A17` is related to variable `A_16`. The SLE LFS required in 2014 that each individual spend 4 nights each week in the household over the previous four weeks in order to be thought of as a LFS eligible.
+As the comments in the scripts explain, `A17_corrected` was created following the questionnaire's rules and it shows that 20.6% of the sample size are not eligible for the survey. These observations are in fact not interviewed, as they do not have values for variables after `A17`. The eligibility in `A17` is related to variable `A_16`. The NPL LFS required in 2014 that each individual spend 4 nights each week in the household over the previous four weeks in order to be thought of as a LFS eligible.
 
 In the GLD harmonization all responses are kept. They can be used to calculate the total population and have responses to demographic variables (e.g., sex, age) but have missing values for the rest of the individual responses.
 
-![codes](utilities/SLE_scripts.png)
+![codes](utilities/NPL_scripts.png)
 
 ![eligibility](utilities/eligibility.png)
 
 ### Wage Analysis Against Age
 
-Our single-year quality check result of SLE 2014 shows that the relationship between wage and age does not conform with general expectation: the income increases as age increases from young adult stage to senior stage before retiring; and income falls as age grows into retiring stage. 
+Our single-year quality check result of NPL 2014 shows that the relationship between wage and age does not conform with general expectation: the income increases as age increases from young adult stage to senior stage before retiring; and income falls as age grows into retiring stage. 
 
-![SLE_wage_analysis](utilities/SLE_wage_analysis.png)
+![NPL_wage_analysis](utilities/NPL_wage_analysis.png)
 
 A closer look at the data reveals that this is caused by a very small sample size (observations of 7) with above-average income. These observations' occupations, such as professors, or law-makers of professionals, do not follow the general rule of wage-age relationship. And their high average income pulls the wage of retirees up, which leads to the red flag of wage analysis. 
 
-![SLE_wage_analysis_data](utilities/SLE_wage_analysis_data.png)
-![SLE_retiree_wage](utilities/retiree_wage.png)
+![NPL_wage_analysis_data](utilities/NPL_wage_analysis_data.png)
+![NPL_retiree_wage](utilities/retiree_wage.png)
