Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -10,15 +10,11 @@
 
 ## What is the NPL LFS?
 
-The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated to better monitor labor market and economic activities. The 1998 LFS was carried out by the Central Bureau of Statistics from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme.
-
-This harmonization 
-
+The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated to better monitor labor market and economic activities. The 1998 LFS was carried out by the Central Bureau of Statistics from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. 
 
 ## What does the NPL LFS cover?
 
-The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days and in the past year. In addition, the NPL LFS also includes information on migration. As we currently only have one year survey data, there is no way to compare the depth and richness in information between years. However, NPL LFS covers 25,645 individuals, 4,199 households randomly selected from a stratified cluster sample with oversampling urban areas. At strata level, it covers 280 enumeration areas in 19 districts/cities plus Western region as a whole.    
-
+The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. This series has three years: 1998, 2008, and 2017. The first year 1998 does not have migration section compared to the other two years. Moreover, 1998 and 2008 both have two recall periods, 7-day and 12-month recall periods whereas 2017 only has 7-day recall period. 
 Below is a table showing districts and cities in the report vs. in the data:
 
 | **District Name**	| **In the Report?**	| **# EA in the Report**	| **In the Data?**	| **# EA in the Data**	|**Note**|
@@ -110,23 +106,8 @@ If the more detailed weights are used (as in the GLD harmonization) the ratios s
 
 The GLD data is thus different to the ILO published data yet we believe it to be containing the correct information.
 
-### Eligibility Variable
-
-As the comments in the scripts explain, `A17_corrected` was created following the questionnaire's rules and it shows that 20.6% of the sample size are not eligible for the survey. These observations are in fact not interviewed, as they do not have values for variables after `A17`. The eligibility in `A17` is related to variable `A_16`. The NPL LFS required in 2014 that each individual spend 4 nights each week in the household over the previous four weeks in order to be thought of as a LFS eligible.
-
-In the GLD harmonization all responses are kept. They can be used to calculate the total population and have responses to demographic variables (e.g., sex, age) but have missing values for the rest of the individual responses.
-
-![codes](utilities/NPL_scripts.png)
-
-![eligibility](utilities/eligibility.png)
 
 ### Wage Analysis Against Age
 
 Our single-year quality check result of NPL 2014 shows that the relationship between wage and age does not conform with general expectation: the income increases as age increases from young adult stage to senior stage before retiring; and income falls as age grows into retiring stage. 
 
-![NPL_wage_analysis](utilities/NPL_wage_analysis.png)
-
-A closer look at the data reveals that this is caused by a very small sample size (observations of 7) with above-average income. These observations' occupations, such as professors, or law-makers of professionals, do not follow the general rule of wage-age relationship. And their high average income pulls the wage of retirees up, which leads to the red flag of wage analysis. 
-
-![NPL_wage_analysis_data](utilities/NPL_wage_analysis_data.png)
-![NPL_retiree_wage](utilities/retiree_wage.png)
