Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -10,12 +10,13 @@
 
 ## What is the NPL LFS?
 
-The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated to better monitor labor market and economic activities. The 1998 LFS was carried out by the Central Bureau of Statistics from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. 
+The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated with the aim to better monitor labor market and provide comprehensive statistics on employment, unemployment, and underemployment. The 1998 LFS was carried out by the Central Bureau of Statistics (CBS) from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. 
 
 ## What does the NPL LFS cover?
 
-The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. This series has three years: 1998, 2008, and 2017. The first year 1998 does not have migration section compared to the other two years. Moreover, 1998 and 2008 both have two recall periods, 7-day and 12-month recall periods whereas 2017 only has 7-day recall period. 
-Below is a table showing districts and cities in the report vs. in the data:
+The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. This harmonization series has three years: 1998, 2008, and 2017. The first year 1998 does not have migration section compared to the other two years. 1998 and 2008 both have two recall periods, 7-day and 12-month recall periods whereas 2017 only has 7-day recall period. In terms of geographical coverage, all three years cover the whole country and the data are nationally representative. 
+
+Below is a table showing simple size in the raw data and official report:
 
 | **District Name**	| **In the Report?**	| **# EA in the Report**	| **In the Data?**	| **# EA in the Data**	|**Note**|
 | :---------------:	| :---------------:		| :------------------:	 	| :--------------:	| :------------------:	|:----:| 
